--- a/sudoku/Cargo.toml
+++ b/sudoku/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "oxo"
+name = "sudoku"
 version = "0.1.0"
 authors = ["Chetan Mistry <cmistry98@gmail.com>"]
 edition = "2018"
@@ -7,5 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-text_io = "0.1.7"
-piston_window = "0.98.0"
+piston = "0.49.0"
+pistoncore-glutin_window = "0.63.0"
+piston2d-graphics = "0.35.0"
+piston2d-opengl_graphics = "0.70.0"
